# swimvision

./: .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  COMPREHENSIVE_FIX_PLAN.md  CONSOLIDATION_SUMMARY.md  DEMO_GUIDE.md  Dockerfile  FIXES_SUMMARY_2025-11-22.md  INTEGRATION_REVIEW.md  Makefile  QUICKSTART_UV.md  QUICK_REFERENCE.md  README.md  SESSION_SUMMARY_2025-11-22.md  SwimVision.md  TECHNOLOGY_REVIEW_2025.md  TODO.md  app.py  audit_estimator_formats.py  claude.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  requirements_3d_reconstruction.txt  requirements_advanced.txt  requirements_macos.txt  setup.sh  test_complete_fix.py  test_mediacode_debug.py  test_trajectory.py  test_yolo_return.py
.github/: dependabot.yml
.github/workflows/: ci.yml  pre-commit.yml
config/: analysis_config.yaml  camera_config.yaml  pose_config.yaml  tracking_config.yaml
demos/: demo_phase1_pipeline.py
docs/: ADVANCED_FEATURES_ARCHITECTURE.py  APPLE_SILICON_GUIDE.md  COMPREHENSIVE_3D_INTEGRATION.md  INTEGRATION_COMPATIBILITY_GUIDE.md  PHASE1.5_3D_RECONSTRUCTION_PLAN.md  PHASE1.5_QUICKSTART.md  PHASE1.5_STATUS.md  PHASE1_GUIDE.md  SAM3D_INTEGRATION_PLAN.md
docs/prds/: PHASE_1_CORE_INFRASTRUCTURE.md  PHASE_2_TIME_SERIES_ANALYSIS.md  PHASE_3_TO_6_SUMMARY.md
models/rtmpose/: rtmpose-m_simcc-coco_pt-aic-coco_420e-256x192.pth
scripts/: audit_estimators.py  demo_advanced_models.py  demo_occlusion_tracking.py  demo_phase2.py  demo_phase3.py  download_models.py  download_motionagformer_weights.sh  download_poseformerv2_weights.sh  init_db.sql  setup.bat  setup.sh  setup_3d_reconstruction.sh  setup_advanced_features.sh  setup_macos_apple_silicon.sh  setup_with_uv.sh
src/analysis/: dtw_analyzer.py  features_extractor.py  frechet_analyzer.py  similarity_measures.py  stroke_phases.py  stroke_similarity.py  symmetry_analyzer.py  water_surface_detector.py
src/cameras/: base_camera.py  video_file.py  webcam.py
src/integration/: __init__.py  freemocap_bridge.py  skellytracker_wrapper.py
src/pipeline/: __init__.py  orchestrator.py
src/pose/: __init__.py  alphapose_estimator.py  base_estimator.py  mediapipe_estimator.py  model_fusion.py  model_registry.py  multi_camera_fusion.py  openpose_estimator.py  rtmpose_estimator.py  smpl_estimator.py  swimming_keypoints.py  vitpose_estimator.py  yolo_estimator.py
src/reconstruction/: __init__.py  motionagformer_estimator.py  motionagformer_loader.py  pipeline_3d.py  poseformerv2_estimator.py  poseformerv2_loader.py  sam3d_estimator.py
src/tracking/: __init__.py  bytetrack_tracker.py  hand_tracker.py  lstm_predictor.py  occlusion_detector.py  phase_templates.py
src/utils/: adaptive_tuning.py  config.py  device_utils.py  format_converters.py  geometry.py  model_comparison.py  pose_bytetrack_adapter.py  smoothing.py
src/visualization/: pose_overlay.py  tracking_overlay.py
tests/: conftest.py  test_advanced_features.py  test_integration.py  test_occlusion_tracking.py  test_phase1_5_integration.py  test_phase1_integration.py  test_phase3.py  test_pose_estimators.py
tests/unit/: test_config.py  test_dtw.py  test_geometry.py  test_similarity_measures.py
